--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
     <title>API Workflow</title>
   </head>
   <body>
@@ -12,7 +12,12 @@
     <p>
       Using JSONPLACEHOLDER API for testing your understanding of API callback
     </p>
-    <section class="api-details"></section>
+    <section class="api-details-wrap">
+      <h3>All Post</h3>
+      <div class="api-details-post"></div>
+      <h4>All users</h4>
+      <div class="api-details-users"></div>
+    </section>
 
     <script src="./app.js"></script>
   </body>
